--- a/style.css
+++ b/style.css
@@ -1,34 +1,31 @@
-@import url('https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;700;900&family=Krona+One&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;700;900&family=Krona+One&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap');
 :root{
- --color-primario: #e4c1f9;
- --color-secundario: #a9def9;
- --color--terciario: #d0f4de;
+ --color-primario: #AEB8FE;
+ --color-secundario: #F1F2F6;
+ --color--terciario: #758BFD;
  --fuente-montse: "Montserrat", sans-serif;
  --fuente-krona: "Krona One", sans-serif;
+ --fuente-roboto: "Roboto Mono", sans-serif;
 
 
 }
-*{
-    padding: 0;
-    margin: 0;
 
-
-}
 .input{
     width: 100%; /* Ajusta el ancho según tus necesidades */
     height:100px; /* Ajusta la altura según tus necesidades */
     padding: 10px; /* Añade espacio alrededor del texto dentro del campo */
     box-sizing: border-box; /* Incluye el padding y el borde en el ancho y altura total del input */
-    font-size: 16px; /* Ajusta el tamaño de la fuente según tus necesidades */
+    font-size: 1rem; /* Ajusta el tamaño de la fuente según tus necesidades */
     text-align: left; /* Alinea el texto a la izquierda */
     vertical-align: top;
 
 }
 .negritas{
-    padding: 15px;
-    font-family: var(--fuente-montse);
+    padding: 1rem;
+    font-family: var(--fuente-roboto);
     font-weight: 600;
-    font-size: 18px;
+    font-size: 1rem;
     color: black; 
     text-align: center;
     
@@ -38,7 +35,7 @@
     padding: 10%;
     font-family: var(--fuente-montse);
     font-weight: 400;
-    font-size: 16px;
+    font-size: 1rem;
     color: black;
     text-align: center;
     
@@ -60,14 +57,14 @@ body{
 
 .header__menu{
     display: flex;
-    gap: 80px;
+    gap: 40px;
 
 }
 
 .header__menu__link{
     font-family: Arial, Helvetica, sans-serif;
     font-weight: 600;
-    font-size: 24px;
+    font-size: 1rem;
     color: black
     
 }
@@ -77,7 +74,7 @@ body{
     align-items: center;
     
     justify-content: space-between;
-    gap: 50px;
+    gap: 82px;
     padding: 5% 15%;
 }
 .Presentacion__contenido{
@@ -87,7 +84,7 @@ body{
     gap: 40px;
 }
 .titulo{
-    font-size: 22px;
+    font-size: 1.5rem;
     font-family: lato;
     color: black;
     
@@ -96,7 +93,7 @@ body{
 
 
 .Presentacion__contenido__parrafo{
-    font-size: 24px;
+    font-size: 1.8rem;
     font-family: var(--fuente-montse);
     font-weight: 400;
     color: black;
@@ -117,12 +114,13 @@ body{
     padding: 10px 0;
     border-radius: 8px;
     font-family: var(--fuente-montse);
-    font-size: 16px;
+    font-size: 1rem;
     font-weight: 600;
     text-decoration: dotted;
     color: black;
     border: 2px solid var(--color--terciario);
     gap: 10px;
+    background-color: var(--color--terciario);
 }
 
 
@@ -138,11 +136,16 @@ body{
     height: 500px;
     width: 400px;
     border-radius: 15px;
-    background-color: var(--color-secundario);
+    background-color: #FF8600;
     justify-content: center;
     align-items: center;
     gap: 10px;
 
+
+}
+
+.box__visualizador__imagen{
+    width: 50%;
 
 }
 
@@ -152,11 +155,12 @@ body{
     padding: 20px 0;
     border-radius: 8px;
     font-family: var(--fuente-montse);
-    font-size: 20px;
+    font-size: 1.5rem;
     font-weight: 600;
     color: black;
     border: 2px solid var(--color--terciario);
     row-gap: 20px;
+    background-color: var(--color--terciario);
 
 }
 
@@ -185,8 +189,15 @@ body{
     text-align: center;
     font-family: var(--fuente-montse);
     font-weight: 400;
-    font-size: 10px;
+    font-size: .8rem;
     position: fixed;
     bottom: 0px;
     right: 0px;
+}
+@media (max-width: 1200){
+    
+    .Presentacion{
+flex-direction: column;
+
+    }
 }
